# briefly-ai

./: .gitignore  README.md
backend/: Dockerfile  README.md  agent.py  debug_formatter.py  docker-compose.yaml  main.py  pyproject.toml  result.txt  test_output.txt
backend-agentcore/: .bedrock_agentcore.yaml  main.py  pyproject.toml
backend-agentcore/agent_deployment/: .env.example  agent.py
backend-aws/: .bedrock_agentcore.yaml  main.py  pyproject.toml
backend-aws/agent_deployment/: .dockerignore  agent.py  pyproject.toml
backend-cdk/: .bedrock_agentcore.yaml  main.py  pyproject.toml
backend-cdk/agent_deployment/: agent.py
backend-vps/: .env.example  agent.py
backend/agent/: Dockerfile  agent.py  pyproject.toml
backend/cdk/: Dockerfile  agent.py  pyproject.toml
backend/tests/: conftest.py  test_youtube_service.py
backend/vps/: Dockerfile  agent.py  pyproject.toml
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
docs/: architecture.md  features.md
frontend/: .env.example  check-ui-labels.js  debug-api.js  next.config.ts  package-lock.json  package.json  verify-ui.js
frontend/app/: layout.tsx
frontend/components/: DeletePromptDialog.tsx  EditPromptDialog.tsx  EmailStatusIndicator.tsx  Navbar.tsx  PromptList.tsx  YouTubeViewer.tsx
frontend/contexts/: auth-context.tsx
frontend/lib/: api-handlers.test.ts  badge-logic.test.ts  db.ts  (+22 more)
infrastructure/: .env.example  app.py  cdk.json  deploy.sh  pyproject.toml  requirements.txt
test/: README.md  pyproject.toml  test-gemini.py  test-strands-tools.py  test-strands.py
(+45 files in other folders)
